--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/favicon-48.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- Professional Typography: Inter Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  
   <title>Autonex Portal</title>
 </head>
 
